--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Life Science Search Engine</title>
   <meta charset="utf-8">
+  <link rel="icon" href="https://www.clipartmax.com/png/full/192-1921017_dna-structure-clipart-life-science-dna-icon-transparent-background.png" type="image/png" sizes="16x16">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,7 +12,8 @@
 <body>
 
 <div class="jumbotron text-center">
-	<h1>Life Science Search Engine</h1>
+	<img src="https://www.clipartmax.com/png/full/192-1921017_dna-structure-clipart-life-science-dna-icon-transparent-background.png" width = "70">
+	<h1>Life Science Search Engine </h1>
 	<p>Project under supervision of Dr. Wajid</p>
 </div>
 
@@ -27,24 +29,23 @@
 	 </div>
 </div>
 
-  
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-9">
+    <div class="col-sm-10">
     	<h3>Results</h3>
 		<table id='mytable' class="table">
 		<tbody>
-		<tr><td>Source</td><td>Title</td><td>Summary</td><td>Data Link</td><td>Site Link</td></tr>
+		<tr><td>Title</td><td>Summary</td><td>Data Link</td><td>Site Link</td></tr>
 		</tbody>
 		</table>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-2 ">
       	<h3>Status</h3>
   		<label id = "search_status"></label>
     </div>
   </div>
 </div>
-
 
 
 <script>
@@ -64,32 +65,32 @@ function setup() {
 
 function loadDoc() {
 	cleanTable()
-	document.getElementById("search_status").innerHTML = "👨‍💻Loading..."
+	document.getElementById("search_status").innerHTML = "</br>?????Loading..."
 
 	var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
 
 	if (this.readyState % 2 == 0)
-	document.getElementById("search_status").innerHTML += "</br>🔍 readyState: "+this.readyState + " status:" +this.status
+	document.getElementById("search_status").innerHTML += "</br>?? readyState: "+this.readyState + " status:" +this.status
 	else
-	document.getElementById("search_status").innerHTML += "</br>🔎 readyState: "+this.readyState + " status:" +this.status
+	document.getElementById("search_status").innerHTML += "</br>?? readyState: "+this.readyState + " status:" +this.status
 
 	if (this.readyState == 4 && this.status == 200) {
 
-			document.getElementById("search_status").innerHTML += "</br>✅Success!"
+			document.getElementById("search_status").innerHTML += "</br>?? Success!"
 
 			var records =  JSON.parse(this.responseText)
 
-			for (i = 0; i < records.length; i++) { 
+			for (i = 0; i < records.length; i++) {
 				addRow(records[i].title, records[i].summary, records[i].dataLink,records[i].siteLink, records[i].source, records[i].sourceImage)
 			}
 
 		} else if (this.status >= 300) {
-			 document.getElementById("search_status").innerHTML += "</br>😔Failed!"
+			 document.getElementById("search_status").innerHTML += "</br>? Failed!"
 		}
 	};
 
-	var url = "http://localhost:8000/api/"+document.getElementById("search_input").value
+	var url = "/api/"+document.getElementById("search_input").value
 	xhttp.open("GET", url, true);
 	xhttp.send();
 }
@@ -113,11 +114,11 @@ function addRow(title,summary,dataLink,siteLink, siteName, siteImage)
          cell1 = document.createElement("td");
          cell2 = document.createElement("td");
          cell3 = document.createElement("td");
-         cell4 = document.createElement("td");	
+         cell4 = document.createElement("td");
          textnode1=document.createTextNode(title);
          textnode2=document.createTextNode(summary);
          textnode3=document.createTextNode("Download Page");
-         textnode4=document.createTextNode("Open details at "+siteName);	
+         textnode4=document.createTextNode("Open details at "+siteName);
 
 		var a = document.createElement('a');
 		a.target="_blank"
@@ -129,8 +130,8 @@ function addRow(title,summary,dataLink,siteLink, siteName, siteImage)
 		img.src = siteImage
 		//img.style.height = '40px';
 		img.style.width = '80px';
-		
-	
+
+
 		var b = document.createElement('a');
 		b.target="_blank"
 		b.appendChild(textnode4);
@@ -142,7 +143,7 @@ function addRow(title,summary,dataLink,siteLink, siteName, siteImage)
 		c.appendChild(img);
 		c.title = title;
 		c.href = siteLink;
-		
+
 		cell0.appendChild(c)
 		cell1.appendChild(textnode1);
         cell2.appendChild(textnode2);
@@ -153,7 +154,7 @@ function addRow(title,summary,dataLink,siteLink, siteName, siteImage)
          row.appendChild(cell1);
          row.appendChild(cell2);
 		 row.appendChild(cell3);
-		 row.appendChild(cell4);	
+		 row.appendChild(cell4);
          tabBody.appendChild(row);
 
 
