--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8" id = "results_view">
+    <div class="col-sm-9" id = "results_view">
     	<h3>Results</h3>
 		<table id='mytable' class="table">
 			<tbody>
 			</tbody>
 		</table>
     </div>
-    <div class="col-sm-4" id = "status_view">
+    <div class="col-sm-3" id = "status_view">
       	<h3>Status</h3>
-  		<label id = "search_status"></label>
+  		<small id = "search_status"></small>
     </div>
   </div>
 	<div class="container" id = "pagerView">
@@ -107,6 +107,9 @@ function loadDoc(pageNumber=0) {
 			var records =  JSON.parse(this.responseText)
 
 			setUpPagination(records.pages)
+
+			setActivePage(pageNumber)
+
 			showResultsView()
 
 			document.getElementById("search_status").innerHTML += "</br>✅ Success!"
@@ -189,6 +192,19 @@ function showResultsView(){
 	y.style.display = "block";	
 }
 
+function setActivePage(pageNumber){
+	var y = document.getElementById("pagerListView");
+
+	var i = 0
+	for ( i =0 ; i< y.children.length; i++) {
+
+		if (i == pageNumber) {
+			y.children[i].setAttribute("class","active")	
+		} else {
+			y.children[i].removeAttribute("class")				
+		}
+	}
+}
 
 function setUpPagination(pages){
 
