--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-10" id = "results_view">
-    	<h3>Results</h3>
+    	<h3 id ="resutls_for">Results</h3>
 		<table id='mytable' class="table">
 			<tbody>
 			</tbody>
@@ -106,11 +106,11 @@ function loadDoc(pageNumber=0) {
 
 			var records =  JSON.parse(this.responseText)
 
+			showResultsView(records.query)
+
 			setUpPagination(records.pages)
 
 			setActivePage(pageNumber)
-
-			showResultsView()
 
 			document.getElementById("search_status").innerHTML += "</br>✅ Success!"
 
@@ -175,6 +175,9 @@ function cleanView() {
 	var x = document.getElementById("status_view");
 	var y = document.getElementById("results_view");
 
+	document.getElementById("resutls_for").innerHTML = "Results"
+
+
 	x.style.display = "none";
 	y.style.display = "none";
 
@@ -187,8 +190,9 @@ function showStatusView(){
 	x.style.display = "block";
 }
 
-function showResultsView(){
+function showResultsView(q){
 	var y = document.getElementById("results_view");
+	var x = document.getElementById("resutls_for").innerHTML = "Search Results for \""+q+"\""
 	y.style.display = "block";	
 }
 
